--- a/9 lesson/index.html
+++ b/9 lesson/index.html
@@ -5,28 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        #boxColor {
-            width: 100px;
-            height: 100px;
-            background-color: blue;
-            margin-top: 20px;
-            margin-bottom: 20px;
-        }
+        
     </style>
 </head>
 <body>
-
-    <button id="btnDblClick">Нажми меня дважды</button>
-
-    <hr>
-
-    <select id="selectColor">
-        <option disabled>Выберите цвет</option>
-        <option value="red">Красный</option>
-        <option value="blue">Синий</option>
-        <option value="green">Зеленый</option>
-    </select>
-
+    <h2>Задачи по работе:</h2>
+    <ul class="task-list" id="taskWork">
+        <li>Задача 1</li>
+        <li>Задача 2</li>
+        <li>Задача 3</li>
+        <li>Задача 4</li>
+        <li>Задача 5</li>
+    </ul>
+    <h2>Задачи общие:</h2>
+    <ul class="task-list" id="taskAll">
+        <li>Задача 1</li>
+        <li>Задача 2</li>
+        <li>Задача 3</li>
+        <li>Задача 4</li>
+        <li>Задача 5</li>
+    </ul>
     <script src="script.js"></script>
 </body>
 </html>
