--- a/10 lesson/index.html
+++ b/10 lesson/index.html
@@ -4,52 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sansation:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: "Sansation", sans-serif;
-            font-size: 20px;
-        }
-        ul {
-            list-style-type: none;
-            padding-left: 0;
-        }
-        li {
-            background-color: #eeeeee;
-            padding: 10px 20px;
-        }
-        li:first-child {
-            padding-top: 20px;
-        }
-        li:last-child {
-            padding-bottom: 20px;
-        }
-        button {
-            font-family: inherit;
-            font-size: inherit;
-            border: none;
-            border-radius: 10px;
-            padding: 10px 20px;
-        }
-        #showAdults {
-            background-color: lightskyblue;
-        }
-        #showChildren {
-            background-color: lightgreen;
-        }
-        #showAll {
-            background-color: lightpink;
+        #boxColor {
+            width: 100px;
+            height: 100px;
+            background-color: blue;
+            margin-top: 20px;
+            margin-bottom: 20px;
         }
     </style>
 </head>
 <body>
 
-    <button id="showAdults">Показать взрослых</button>
-    <button id="showChildren">Показать детей</button>
-    <button id="showAll">Показать всех</button>
-    <ul id="userList"></ul>
+    <button id="btnDblClick">Нажми меня дважды</button>
+
+    <hr>
+
+    <select id="selectColor">
+        <option disabled>Выберите цвет</option>
+        <option value="red">Красный</option>
+        <option value="blue">Синий</option>
+        <option value="green">Зеленый</option>
+    </select>
 
     <script src="script.js"></script>
 </body>
